# calendify

./: .gitignore  Pipfile  README.md  calendars.yaml  generate_token_file.py  pyproject.toml
.github/workflows/: lel-sync.yml
src/: calendar_api.py  calendar_colors.py  event.py  gcalendar_api.py  lesson.py  main.py  skola24_api.py  source.py  target.py  timeedit_api.py  update_calendar.py  utils.py
src/calendify/: calendar_colors.py  event.py  gcalendar_api.py  main.py  skola24_api.py  source.py  target.py  timeedit_api.py  utils.py
