[project]
name = "calendify"
version = "0.1.0"
description = "A simple python script for syncing schedules from different services to a Google Calendar"
authors = [
    { name = "Benjamin Agardh", email = "bemain.dev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "oauth2client>=4.1.3",
    "pyyaml>=6.0.2",
]
classifiers = ["Private :: Do not Upload"]

[project.scripts]
calendify = "calendify.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-downloads = "automatic"
